updates of first milestone

--- a/admin_black_pro/templates/includes/footer.html
+++ b/admin_black_pro/templates/includes/footer.html
@@ -18,8 +18,9 @@
       </li>
     </ul>
     <div class="copyright">
-      &copy;
-      <a href="https://bit.ly/3fKQZaL" target="_blank">Creative Tim</a> - Coded by AppSeed.
+      <button class="btn btn-info" data-toggle="modal" data-target="#noticeModal">
+        Help
+      </button>
     </div>
   </div>
 </footer>
