--- a/admin_black_pro/templates/includes/menu-list.html
+++ b/admin_black_pro/templates/includes/menu-list.html
@@ -12,7 +12,7 @@
   </li>
   <li class="nav-item ">
     <a href="{% url 'register' %}" class="nav-link">
-      <i class="tim-icons icon-laptop"></i> Register
+      <i class="tim-icons icon-laptop"></i> Register As Hiring Manager
     </a>
   </li>
   <li class="nav-item ">
