--- a/admin_black_pro/templates/accounts/register.html
+++ b/admin_black_pro/templates/accounts/register.html
@@ -49,9 +49,8 @@
             {% csrf_token %}
 
             <div class="card card-register card-white">
-              <div class="card-header">
-                <img class="card-img" src="{% static 'assets/img/card-primary.png' %}" alt="Card image">
-                <h4 class="card-title">Register</h4>
+              <div class="card-header" style="margin-bottom: -10em;">
+                <img src="{% static 'assets/img/sunray_ops.jpeg' %}" alt="">
               </div>
                 <div class="card-body">
                   <div class="input-group">
