--- a/admin_black_pro/templates/includes/sidebar.html
+++ b/admin_black_pro/templates/includes/sidebar.html
@@ -7,10 +7,10 @@
   <div class="sidebar-wrapper">
     <div class="logo">
       <a href="javascript:void(0)" class="simple-text logo-mini">
-        HR-P
+        SR-H
       </a>
       <a href="javascript:void(0)" class="simple-text logo-normal">
-        HR Portal
+        Sunray Hire
       </a>
     </div>
     <ul class="nav">
