--- a/admin_black_pro/templates/includes/footer.html
+++ b/admin_black_pro/templates/includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container-fluid">
-    <ul class="nav">
+    <ul class="nav d-none">
       <li class="nav-item">
         <a href="https://appseed.us/product/black-dashboard-pro/django/" target="_blank" class="nav-link">
           Download
